--- a/config.json
+++ b/config.json
@@ -2,7 +2,7 @@
   "inbounds": [
     {
       "port": 8080,
-      "protocol": "vmess",
+      "protocol": "vless",
       "settings": {
         "clients": [
           {
@@ -15,7 +15,7 @@
       "streamSettings": {
         "network": "ws",
         "wsSettings": {
-          "path": "/MR_VPN_Mubarak"
+          "path":  "/TG-@Not_Ragnar"
         }
       }
     }
